proper reset file, fixed flex wrapping on box elements

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -14,6 +14,10 @@ html {
     font-size: 16px;
 }
 
+a:visited {
+    color: black;
+}
+
 h1,
 h2,
 h3,
@@ -36,7 +40,6 @@ body {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    margin: -20px -10px 10px -10px;
     background-image: linear-gradient(
         #2f4353 0%, #d2ccc4 74%
     );
@@ -87,70 +90,57 @@ p {
     color:var(--lightgreen);
 }
 
-.body {
+.boxes {
     display: flex;
-    justify-content: center;
     flex-direction: column;
 }
 
 .project1 {
     background-image: url(https://media.cntraveler.com/photos/5eb18e42fc043ed5d9779733/16:9/w_2580,c_limit/BlackForest-Germany-GettyImages-147180370.jpg);
-    margin: 100px 300px 100px 100px;
-    width: 1700px;
-    height: 500px;
-    font-size: 4rem;
+    width: 1000px;
+    height: 300px;
+    font-size: 2rem;
     text-decoration: none;
     color: forestgreen;
     outline-color: black;
     outline: 3px;
-    justify-content: center;
+    justify-content: left;
     backdrop-filter: var(--offwhite);
 }
+
 .horiseon {
-    mix-blend-mode: screen;
     margin: 0 auto;
+    display: inline;
 }
 .projects2 {
-    margin: 100px 300px 100px 100px;
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    width: 1800px;
-    height: 800px;
-    font-size: 3.5rem;
-    margin-top: -100px;
+    font-size: 2rem;
+    width: 1000px;
+    justify-content: space-between;
 }
+
 
 .projects2 #css {
     background-color: green;
-    width: 850px;
-    height: 400px;
-    margin-right: -25px;
-    margin-left: -25px;
-    mix-blend-mode: screen;
+    width: 400px;
+    height: 150px;   
 }
 
 .projects2 #jvs {
     background-color: green;
-    width: 850px;
-    height: 400px;
-    mix-blend-mode: screen;
+    width: 400px;
+    height: 150px;
 }
 
 .projects2 #react {
     background-color: green;
     width: 400px;
-    height: 350px;
+    height: 150px;
 }
 
 .projects2 #p5 {
     background-color: green;
-    width: 400x;
-    height: 350px;
-}
-
-.projects2 #p6 {
-    background-color: green;
     width: 400px;
-    height: 350px;
+    height: 150px;
 }
